ライブラリ画面の進捗率計算方法を変更

--- a/src/main.css
+++ b/src/main.css
@@ -112,8 +112,8 @@
 }
 
 .addon_read_reading{
-    background-color: #1f9aff;
+    background-color: #545cff;
 }
 .addon_read_finish{
-    background-color: rgb(224, 168, 63);
+    background-color: #ff6916;
 }
